Repair timezone and clock in pages_lcd_16x2.py

--- a/pydPiper.cfg
+++ b/pydPiper.cfg
@@ -2,7 +2,7 @@
 startup_msg_duration = 5
 
 [DISPLAY]
-display_driver = winstar_weg
+display_driver = hd44780_i2c
 display_pin_rs = 7
 display_pin_e = 8
 display_pin_d4 = 25
@@ -11,18 +11,21 @@ display_pin_d6 = 23
 display_pin_d7 = 27
 display_width = 80
 display_height = 16
-display_enable_duration = 0.1
-pagefile = pages_weh_80x16.py
-animation_smoothing = 0.1
+display_enable_duration = 0.15
+pagefile = pages_lcd_16x2.py
+animation_smoothing = 0.15
+display_i2c_port = 1
+display_i2c_address = 0x27
 
 [SYSTEM]
 logfile = /var/log/pydPiper.log
 loglevel = info
-timezone = US/Eastern
-time24hour = false
-temperature = fahrenheit
+timezone = Europe/Amsterdam
+time24hour = True
+temperature = celsius
 
 [SOURCE]
 source_type = volumio
 volumio_server = localhost
 volumio_port = 3000
+
