--- a/pydpiper.service
+++ b/pydpiper.service
@@ -5,7 +5,7 @@ After = volumio.service
 
 [Service]
 Restart = always
-ExecStart = /usr/bin/docker run --network=host --privileged -v /var/log:/var/log:rw -v /home/volumio/pydPiper:/app:rw dhrone/pydpiper:v0.31-alpha python /app/pydPiper.py
+ExecStart = /usr/bin/docker run --network=host --privileged -v /var/log:/var/log:rw -v /home/volumio/pydPiper:/app:rw dhrone/pydpiper:latest python /app/pydPiper.py
 
 [Install]
 WantedBy = multi-user.target
