Added Dutch Weather service weerlive.nl (from KNMI). And added some beautifying.

--- a/pydPiper.cfg
+++ b/pydPiper.cfg
@@ -23,7 +23,10 @@ loglevel = info
 timezone = Europe/Amsterdam
 time24hour = True
 temperature = celsius
-
+weather_service = weerlive
+weather_api = demo
+weather_location = Amsterdam
+weather_outside = Buiten:
 [SOURCE]
 source_type = volumio
 volumio_server = localhost
