--- a/pydPiper.cfg
+++ b/pydPiper.cfg
@@ -19,7 +19,7 @@ display_i2c_address = 0x27
 
 [SYSTEM]
 logfile = /var/log/pydPiper.log
-loglevel = info
+loglevel = debug
 timezone = Europe/Amsterdam
 time24hour = True
 temperature = celsius
@@ -28,7 +28,11 @@ weather_api = demo
 weather_location = Amsterdam
 weather_outside = Buiten:
 [SOURCE]
+#source_type = mpd
+#mpd_server = localhost
+#mpd_port = 6600
+#mpd_password = 
 source_type = volumio
-volumio_server = localhost
+volumio_server = 192.168.2.37
 volumio_port = 3000
 
