--- a/pydpiper.service
+++ b/pydpiper.service
@@ -1,12 +1,12 @@
 [Unit]
 Description = pydPiper
 Requires = docker.service
-After = volumio.service
+After = mpd.service
 
 [Service]
 Restart = always
-ExecStart = /usr/bin/docker run --network=host --privileged -v /var/log:/var/log:rw -v /home/volumio/pydPiper:/app:rw dhrone/pydpiper:latest python /app/pydPiper.py
-
+ExecStart = /usr/bin/docker run --rm --network=host --privileged -v /var/log:/var/log:rw -v /home/volumio/pydPiper:/app:rw dhrone/pydpiper:latest python /app/pydPiper.py
+ExecStop = /usr/bin/docker stop -t 2 dhrone/pydpiper:latest
 [Install]
 WantedBy = multi-user.target
 
