Cleanup pydPiper.cfg

--- a/pydPiper.cfg
+++ b/pydPiper.cfg
@@ -33,6 +33,6 @@ weather_outside = Buiten:
 #mpd_port = 6600
 #mpd_password = 
 source_type = volumio
-volumio_server = 192.168.2.37
+volumio_server = localhost
 volumio_port = 3000
 
