Loglevel in pydPiper.cfg back to info level. Extended README.md

--- a/pydPiper.cfg
+++ b/pydPiper.cfg
@@ -19,7 +19,7 @@ display_i2c_address = 0x27
 
 [SYSTEM]
 logfile = /var/log/pydPiper.log
-loglevel = debug
+loglevel = info
 timezone = Europe/Amsterdam
 time24hour = True
 temperature = celsius
