Add --name pydpiper to docker run command

--- a/pydpiper.service
+++ b/pydpiper.service
@@ -1,11 +1,14 @@
 [Unit]
 Description = pydPiper
 Requires = docker.service
-After = mpd.service
+After=volumio.service
+
+[Service]
+Restart=always
 
 [Service]
 Restart = always
-ExecStart = /usr/bin/docker run --rm --network=host --privileged -v /var/log:/var/log:rw -v /home/volumio/pydPiper3:/app:rw synoniem/pydpiper3:latest python /app/pydPiper.py
+ExecStart = /usr/bin/docker run --rm --network=host --privileged --name pydpiper -v /var/log:/var/log:rw -v /home/volumio/pydPiper3:/app:rw synoniem/pydpiper3:latest python /app/pydPiper.py
 ExecStop = /usr/bin/docker stop -t 2 synoniem/pydpiper3:latest
 [Install]
 WantedBy = multi-user.target
